@@ -6,8 +6,9 @@ apport (0.102) UNRELEASED; urgency=low
   * debian/control, debian/rules: Switch from python-support to
     python-central, and use 'nomove' option so that apport works during
     upgrades, too. (LP: #121341)
+  * debian/rules: Use dh_icons instead of dh_iconcache.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Feb 2008 13:29:24 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Feb 2008 13:37:03 +0100
 
 apport (0.101) hardy; urgency=low
 
